# MinecraftClone

./: .gitattributes  .~lock.CMakeLists.txt#  CMakeLists.txt  MinecraftC++.sln  MinecraftC++.vcxproj  MinecraftC++.vcxproj.filters  README.md  camera.cpp  camera.hpp  loader.cpp  loader.hpp  model.hpp  perlin.cpp  renderer.cpp  renderer.hpp  rendering_engine.cpp  world.hpp
include/: camera.hpp  chunk.hpp  collision_detection.hpp  entity.hpp  loader.hpp  model.hpp  obj_loader.hpp  perlin.hpp  player.hpp  renderer.hpp  rendering_engine.hpp  shader.hpp  world.hpp
shaders/: chunk_fragment_shader.glsl  chunk_vertex_shader.glsl  fragment_shader.glsl  hud_fragment_shader.glsl  hud_vertex_shader.glsl  outline_fragment_shader.glsl  outline_vertex_shader.glsl  vertex_shader.glsl
src/: camera.cpp  chunk.cpp  collision_detection.cpp  loader.cpp  main.cpp  obj_loader.cpp  perlin.cpp  player.cpp  renderer.cpp  rendering_engine.cpp  shader.cpp  world.cpp
